tests/snapshots/regression/semantic_types__adts__constructor_arity_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/adts/constructor_arity_error.flx
exit_code: 1

[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 2 errors • tests/fixtures/semantic_types/adts/constructor_arity_error.flx
error[E430]: Could Not Infer Concrete Type

Could not determine a concrete type for `main` at the public function signature. Inferred type: `() -> _`.

  tests/fixtures/semantic_types/adts/constructor_arity_error.flx:3:1
  |
3 | fn main() {
  | ^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn main(x: Int, y: Int): Int`


error[E082]: Constructor Arity Mismatch

Constructor `Pair` expects 2 argument(s) but got 1.

  tests/fixtures/semantic_types/adts/constructor_arity_error.flx:4:5
  |
4 |     Pair(1)
  |     ^^^^^^^

Found 2 errors.
